docs/next/styles/globals.css
/* ... */
.DocSearch-Hit[aria-selected="true"] > a {
  background: theme("colors.blurple");
}

.DocSearch-Hit + .DocSearch-Hit {
  margin-top: 0.5rem;
}

.DocSearch-Hit {
  position: relative;
}

.DocSearch-Hit--Child {
  padding-left: 1.75rem;
}

.DocSearch-Hit--Child::before,
.DocSearch-Hit--Child + .DocSearch-Hit:not(.DocSearch-Hit--Child)::before {
  content: "";
  position: absolute;
  top: -0.25rem;
  bottom: -0.25rem;
  left: 0.5rem;
  width: 1.25rem;
  background-image: url("data:image/svg+xml,%3Csvg width='12' height='200' viewBox='0 0 12 200' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M 1 0 V 200 M 1 100 H 12' stroke='%23a1a1aa' stroke-width='2'/%3E%3C/svg%3E%0A");
  background-repeat: no-repeat;
  background-position: center left;
}

.DocSearch-Hit--Child:last-child::before,
.DocSearch-Hit--Child + .DocSearch-Hit:not(.DocSearch-Hit--Child)::before {
  background-image: url("data:image/svg+xml,%3Csvg width='12' height='200' viewBox='0 0 12 200' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M 1 0 V 89 Q 1 100 12 100' stroke='%23a1a1aa' stroke-width='2'/%3E%3C/svg%3E%0A");
}

.DocSearch-Hit:not(.DocSearch-Hit--Child) + .DocSearch-Hit--Child::after {
  content: "";
  position: absolute;
  top: -0.25rem;
  left: 0;
  width: 1.25rem;
  height: 0.25rem;
  background: #fff;
}

.DocSearch-Hit--Child + .DocSearch-Hit:not(.DocSearch-Hit--Child)::before {
  top: auto;
  bottom: calc(100% + 0.25rem);
  height: calc(100% + 0.25rem);
  background-color: #fff;
}

.DocSearch-Hits mark {
  background: none;
  color: theme("colors.blurple");
}

.DocSearch-Hit[aria-selected="true"] mark {
  color: inherit;
  text-decoration: underline;
}

.DocSearch-Footer {
  flex: none;
  display: flex;
  justify-content: flex-end;
  margin: 0 1.5rem;
  border-top: 1px solid theme("colors.gray.200");
  padding: 1.25rem 0;
  display: none;
}

.DocSearch-Commands {
  display: none;
}

.DocSearch-Logo a {
  display: flex;
  align-items: center;
  color: #5d6494;
  font-size: 0.75rem;
  font-weight: 500;
}

.DocSearch-Logo svg {
  color: #5468ff;
  margin-left: 0.5rem;
}

.DocSearch-Hit--deleting,
.DocSearch-Hit--favoriting {
  opacity: 0;
  transition: all 250ms linear;
}

.DocSearch-NoResults .DocSearch-Screen-Icon {
  display: none;
}

.DocSearch-Title {
  font-size: theme("fontSize.lg");
  line-height: theme("lineHeight.6");
  margin-bottom: 2.5rem;
}

.DocSearch-Title strong {
  color: theme("colors.gray.900");
  font-weight: 500;
}

.DocSearch-StartScreen,
.DocSearch-NoResults {
  padding-top: 1rem;
  padding-bottom: 0;
}

.DocSearch-StartScreen .DocSearch-Help {
  font-size: theme("fontSize.lg");
  line-height: theme("lineHeight.6");
}

.DocSearch-NoResults-Prefill-List .DocSearch-Help {
  font-size: theme("fontSize.xs");
  line-height: theme("lineHeight.4");
  letter-spacing: theme("letterSpacing.wide");
  text-transform: uppercase;
  font-weight: 600;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid theme("colors.gray.200");
}

.DocSearch-NoResults-Prefill-List li {
  padding: 0.5rem 0;
  border-bottom: 1px solid theme("colors.gray.200");
}

.DocSearch-NoResults-Prefill-List button {
  font-weight: 500;
  color: theme("colors.primary.900");
}

.DocSearch-NoResults-Prefill-List + .DocSearch-Help {
  font-size: theme("fontSize.sm");
  line-height: theme("lineHeight.5");
  margin-top: 1rem;
}

.DocSearch-NoResults-Prefill-List + .DocSearch-Help a {
  box-shadow: theme("boxShadow.sm");
  color: theme("colors.primary.900");
  font-weight: 500;
}


.SearchHit {
  display: flex;
  flex-direction: column;
  padding: 0.8rem 0;
  border-bottom: 1px solid theme("colors.gray.200");
  margin: 0.5rem 0;
}

.SearchPath {
  font-size: .8rem;
  color: theme("colors.gray.500");
}

.SearchSnippet {
  font-size: .9rem;
  font-style: italic;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 300;
  color: theme("colors.gray.500");
}

.ais-Pagination-item {
  display: inline;
  margin: 0.5rem;
  color: theme("colors.blurple");
}

.ais-SearchBox-form button {
  display: none;
}

.ais-SearchBox-input {
  width: 100%;
}

.sidebar-container {
  max-height: calc(100vh - 10rem);
  padding-bottom: 5rem;
}

div.flag {
  background: theme("colors.gray.150");
  padding: 0 1rem;
  margin-top: 1rem; 
  border-radius: 0.25rem;
  border: 1px solid theme("colors.gray.200");
}

pre[class="noop"] {
    background-color: transparent;
    padding: 0 !important;
    border: none !important;
    margin: 0 !important;
    border-radius: 0 !important;
}

